Fixed alignment issue in hole card tooltip

--- a/src/client/less/custom.less
+++ b/src/client/less/custom.less
@@ -315,8 +315,8 @@
 }
 
 .tooltip-thumbnail {
-	float: left;
-	width: 50px;
+	width: @cardWidth * 0.8;
+	height: @cardHeight * 0.8;
 }
 
 #control-panel {
